--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		</div>
 	</div>
 
+		<!-- Here is the example of the Preloader --->
 	<div class="header_content">
 		<h2>THAPA TECHNICAL / YOUTUBER / WEB DEVELOPER</h2>
 		<h1>vinod thapa</h1>
